[tool.poetry]
name = "shortlink"
version = "0.1.8"
description = "A url shortener maker."
authors = ["AA."]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://aerocyber.github.io/ShortLink/docs"
keywords = ["url shortener maker", "url nickname"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries"
]
packages = [
    { include = "ShortLink", from="src"}
]

[tool.poetry.dependencies]
python = "^3.6"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aerocyber/ShortLink/issues"
"Home Page" = "https://aerocyber.github.io/ShortLink"
"Source Code" = "https://github.com/aerocyber/ShortLink"
"Documentation" = "https://aerocyber.github.io/ShortLink/docs"
